# Sine

./: LICENSE  README.md  pyproject.toml
src/raw/: config.py
src/raw/application/: __init__.py
src/raw/application/services/: group.py  groups.py  session.py  system.py  tag.py
src/raw/cli/: __init__.py  config.py  connection.py  constants.py  proxy.py
src/raw/cli/commands/: daemon.py  groups.py
src/raw/cli/icmds/: __init__.py
src/raw/cli/utils/: icm.py
src/raw/core/: __init__.py
src/raw/core/database/: session.py
src/raw/domain/: __init__.py
src/raw/domain/base/: entity.py  interfaces.py
src/raw/domain/config/: entity.py
src/raw/domain/general/: interfaces.py
src/raw/domain/group/: entity.py
src/raw/domain/session/: entity.py  interfaces.py
src/raw/domain/tag/: entity.py  interfaces.py
src/raw/domain/ucr/: entity.py
src/raw/infrastructure/: __init__.py
src/raw/infrastructure/adapters/: files.py  sa_group.py
src/raw/infrastructure/sqla/: __init__.py  session.py
src/raw/rawd/: daemon.py  decorators.py  handler.py
src/raw/rawd/database/: session.py
src/raw/rawd/entities/: __init__.py  entity.py  tag.py  task.py
src/raw/rawd/services/: decorators.py  folders.py  sessions.py  tags.py
src/sine/cli/: __init__.py
src/sine/cli/utils/: connection.py  resolve.py
src/sine/common/: constants.py
src/sine/daemon/: funcs.py  handler.py
src/uzi/cli/: __init__.py
src/uzi/common/: config.py  constants.py
src/uzi/daemon/: __init__.py
src/wu/: config.py
src/wu/cli/: __init__.py  constants.py
src/wu/daemon/: daemon.py
(+30 files in other folders)
