[project]
name = "raw"
version = "1.3.4"
description = "A CLI Tool for Tracking Study & Work Time 🦇"

authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]

packages = [
    { include = "raw", from = "src" }
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
